--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js --exec babel-node"
+    "dev": "nodemon src/index.js --exec babel-node",
+    "build": "babel src -d dist && ncp src/views dist/views && ncp src/public dist/public"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +21,9 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.2",
     "@babel/node": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.18.6",
     "@babel/preset-env": "^7.18.2",
+    "ncp": "^2.0.0",
     "nodemon": "^2.0.16"
   }
 }
